# ml_digest

./: .gitignore  README.md  pyproject.toml
how_it_was_created/: Part 1 ChatGPT-RSS_article_digest_creation.md  Part 2 ChatGPT-RSS_Feed_Digest_Utility.md  Part 3 ChatGPT-RSS_Digest_Generator.md
ml_digest/: digest_generator.py  main.py  rss_reader.py  text_processing.py
test/: feeds.xml
